--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -109,9 +109,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17193243" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17215474" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/jgavris/rs-git-fsmonitor">Fast `git status` (git core.fsmonitor in Rust)</a>
+                                    <a href="https://www.verdaccio.org/">Verdaccio – Open-Source Lightweight private NPM proxy registry</a>
                                 </span>
                             </td>
                         </tr>
@@ -123,9 +123,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17215474" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17206889" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.verdaccio.org/">Verdaccio – Open-Source Lightweight private NPM proxy registry</a>
+                                    <a href="https://slacklunch.club">Slack Lunch Club</a>
                                 </span>
                             </td>
                         </tr>
@@ -375,17 +375,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://twitter.com/SimoneGiertz/status/1002036156752543746">Simone Giertz is out of surgery and her doctors are very pleased</a>
+                                    <a href="https://www.vox.com/science-and-health/2018/5/31/17344406/crispr-mosquito-malaria-gene-drive-editing-target-africa-regulation-gmo">The debate over whether to use genetically modified mosquitoes to fight malaria</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17194011">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17214676">
                                         
-                                            5 comments
+                                            67 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=neurotech1">neurotech1</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527741750"
+                                            href="https://news.ycombinator.com/user?id=fluxic">fluxic</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527949094"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     78 points
                                 </span>
@@ -399,19 +399,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.vox.com/science-and-health/2018/5/31/17344406/crispr-mosquito-malaria-gene-drive-editing-target-africa-regulation-gmo">The debate over whether to use genetically modified mosquitoes to fight malaria</a>
+                                    <a href="https://twitter.com/SimoneGiertz/status/1002036156752543746">Simone Giertz is out of surgery and her doctors are very pleased</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17214676">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17194011">
                                         
-                                            64 comments
+                                            5 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=fluxic">fluxic</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527949094"
+                                            href="https://news.ycombinator.com/user?id=neurotech1">neurotech1</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527741750"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    77 points
+                                    78 points
                                 </span>
                             </td>
                         </tr>
@@ -458,7 +458,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527988204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527988803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
