--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -109,9 +109,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17193243" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17215474" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/jgavris/rs-git-fsmonitor">Fast `git status` (git core.fsmonitor in Rust)</a>
+                                    <a href="https://www.verdaccio.org/">Verdaccio – Open-Source Lightweight private NPM proxy registry</a>
                                 </span>
                             </td>
                         </tr>
@@ -123,9 +123,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17215474" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17206889" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.verdaccio.org/">Verdaccio – Open-Source Lightweight private NPM proxy registry</a>
+                                    <a href="https://slacklunch.club">Slack Lunch Club</a>
                                 </span>
                             </td>
                         </tr>
@@ -243,7 +243,7 @@
                                             href="https://news.ycombinator.com/user?id=madmax108">madmax108</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527838002"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    597 points
+                                    598 points
                                 </span>
                             </td>
                         </tr>
@@ -411,7 +411,7 @@
                                             href="https://news.ycombinator.com/user?id=lando2319">lando2319</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527898667"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    382 points
+                                    383 points
                                 </span>
                             </td>
                         </tr>
@@ -429,13 +429,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17214320">
                                         
-                                            104 comments
+                                            105 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mariuz">mariuz</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527943469"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    371 points
+                                    372 points
                                 </span>
                             </td>
                         </tr>
@@ -575,7 +575,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527988204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527988803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
