--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -109,9 +109,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17193243" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17215474" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/jgavris/rs-git-fsmonitor">Fast `git status` (git core.fsmonitor in Rust)</a>
+                                    <a href="https://www.verdaccio.org/">Verdaccio – Open-Source Lightweight private NPM proxy registry</a>
                                 </span>
                             </td>
                         </tr>
@@ -123,9 +123,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17215474" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17206889" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.verdaccio.org/">Verdaccio – Open-Source Lightweight private NPM proxy registry</a>
+                                    <a href="https://slacklunch.club">Slack Lunch Club</a>
                                 </span>
                             </td>
                         </tr>
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://nancysbraintalks.mit.edu/course/9-11-the-human-brain">MIT 9.11: The Human Brain (Spring 2018)</a>
+                                    <a href="https://phys.org/news/2018-05-aim-stars-rocket.html">A 'self-eating' rocket engine could put satellites in orbit more easily</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17216634">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17209456">
                                         
-                                            10 comments
+                                            42 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=indescions_2018">indescions_2018</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527976883"
+                                            href="https://news.ycombinator.com/user?id=curtis">curtis</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527882885"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    139 points
+                                    143 points
                                 </span>
                             </td>
                         </tr>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527988204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527988803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
