--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -375,17 +375,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://blog.semanticscholar.org/the-association-between-early-arxiv-posting-and-citations-72034f0914b2">The Association Between Early ArXiv Posting and Citations</a>
+                                    <a href="https://www.gamasutra.com/view/news/318588/The_great_video_game_exodus.php">The great video game exodus</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17216900">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17217081">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=trextrex">trextrex</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527980764"
+                                            href="https://news.ycombinator.com/user?id=smacktoward">smacktoward</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527983596"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     3 points
                                 </span>
@@ -399,17 +399,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://elementary.io/">Elementary OS</a>
+                                    <a href="https://blog.semanticscholar.org/the-association-between-early-arxiv-posting-and-citations-72034f0914b2">The Association Between Early ArXiv Posting and Citations</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17216894">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17216900">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=gamesbrainiac">gamesbrainiac</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527980736"
+                                            href="https://news.ycombinator.com/user?id=trextrex">trextrex</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527980764"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     3 points
                                 </span>
@@ -458,7 +458,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527989403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527990003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
