--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -495,19 +495,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.freecodecamp.org/how-to-setup-a-powerful-api-with-nodejs-graphql-mongodb-hapi-and-swagger-e251ac189649">How to Set-Up an API with Nodejs, GraphQL, MongoDB, Hapi, and Swagger</a>
+                                    <a href="https://drive.google.com/a/moundsviewschools.org/file/d/12dWQdmIdApTLtcKBF1yRyhBto5_Bz3I_/view?usp=drivesdk">A brief introduction to quantum computing</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17215605">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17217155">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=indreklasn">indreklasn</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527962387"
+                                            href="https://news.ycombinator.com/user?id=friedrich12">friedrich12</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527984820"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    9 points
+                                    10 points
                                 </span>
                             </td>
                         </tr>
@@ -531,7 +531,7 @@
                                             href="https://news.ycombinator.com/user?id=sdtransier">sdtransier</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527971994"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    8 points
+                                    9 points
                                 </span>
                             </td>
                         </tr>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527990003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527990603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
