--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -399,17 +399,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://twitter.com/SimoneGiertz/status/1002036156752543746">Simone Giertz is out of surgery and her doctors are very pleased</a>
+                                    <a href="https://arxiv.org/abs/1801.00631">Deep learning: a critical appraisal</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17194011">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17216536">
                                         
-                                            5 comments
+                                            38 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=neurotech1">neurotech1</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527741750"
+                                            href="https://news.ycombinator.com/user?id=fanf2">fanf2</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527975781"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     78 points
                                 </span>
@@ -458,7 +458,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527994204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527994803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
