--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -219,7 +219,7 @@
                                             href="https://news.ycombinator.com/user?id=friedrich12">friedrich12</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527984820"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    25 points
+                                    27 points
                                 </span>
                             </td>
                         </tr>
@@ -237,13 +237,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17217324">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=axiomdata316">axiomdata316</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527987787"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    20 points
+                                    21 points
                                 </span>
                             </td>
                         </tr>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/@vivekxk/every-company-that-i-know-of-that-has-tried-this-hybrid-approach-has-walked-it-back-months-later-b00678b68f4b">NextDoor warns Pinterest about using React Native</a>
+                                    <a href="https://www.bbc.co.uk/news/stories-44265475">A diary written on castle floorboards</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17216249">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17217526">
                                         
-                                            5 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=sdtransier">sdtransier</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527971994"
+                                            href="https://news.ycombinator.com/user?id=pmoriarty">pmoriarty</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527991447"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     10 points
                                 </span>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527996005" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527996603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
