--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.epi.org/publication/wage-theft-bigger-problem-forms-theft-workers/">Wage Theft is a Bigger Problem Than Other Forms of Theft</a>
+                                    <a href="https://twitter.com/HeisSpiter/status/1002880397103988737">ReactOS can finally build itself</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17216319">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17215409">
                                         
-                                            166 comments
+                                            62 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=walterbell">walterbell</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527972769"
+                                            href="https://news.ycombinator.com/user?id=O_H_E">O_H_E</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527959542"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    195 points
+                                    198 points
                                 </span>
                             </td>
                         </tr>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527996005" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527996603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
