--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -495,17 +495,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.logolounge.com/articles/2018-logo-trends">Logo design trends of 2018</a>
+                                    <a href="https://nancysbraintalks.mit.edu/course/9-11-the-human-brain">MIT 9.11: The Human Brain (Spring 2018)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17196558">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17216634">
                                         
-                                            47 comments
+                                            18 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=zwieback">zwieback</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527776977"
+                                            href="https://news.ycombinator.com/user?id=indescions_2018">indescions_2018</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527976883"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     228 points
                                 </span>
@@ -519,19 +519,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://ciml.info/">A Course in Machine Learning</a>
+                                    <a href="https://www.logolounge.com/articles/2018-logo-trends">Logo design trends of 2018</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17214588">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17196558">
                                         
-                                            23 comments
+                                            47 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527947521"
+                                            href="https://news.ycombinator.com/user?id=zwieback">zwieback</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527776977"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    225 points
+                                    228 points
                                 </span>
                             </td>
                         </tr>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527996603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527997203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
