--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.spinics.net/lists/linux-crypto/msg33291.html">Linux Cryptography: Speck's real standing with the academic community</a>
+                                    <a href="http://worrydream.com/Engelbart/">A few words on Doug Engelbart (2013)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17214827">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17194456">
                                         
-                                            84 comments
+                                            76 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=zx2c4">zx2c4</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527951245"
+                                            href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527749697"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    200 points
+                                    201 points
                                 </span>
                             </td>
                         </tr>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1528000204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528000803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
