--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/facebookincubator/katran">Katran: A high-performance layer 4 load balancer</a>
+                                    <a href="https://www.gamasutra.com/view/news/318588/The_great_video_game_exodus.php">The great video game exodus</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17199921">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17217081">
                                         
-                                            20 comments
+                                            29 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=SriniK">SriniK</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527798541"
+                                            href="https://news.ycombinator.com/user?id=smacktoward">smacktoward</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527983596"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     104 points
                                 </span>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1528002003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528002604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
