--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -310,7 +310,7 @@
                                             href="https://news.ycombinator.com/user?id=walterbell">walterbell</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527989921"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    19 points
+                                    20 points
                                 </span>
                             </td>
                         </tr>
@@ -538,17 +538,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://twitter.com/HeisSpiter/status/1002880397103988737">From now, ReactOS can fully build ReactOS (after 21 years of project existence)</a>
+                                    <a href="https://www.wired.com/story/search-for-aids-vaccine/">The Search for an AIDS Vaccine</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17214930">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17215679">
                                         
-                                            2 comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jeditobe">jeditobe</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527952873"
+                                            href="https://news.ycombinator.com/user?id=jseliger">jseliger</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527963619"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     11 points
                                 </span>
@@ -600,7 +600,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1528003372" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528003803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
