--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -538,19 +538,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://bytemybits.gitlab.io/post/2018-05-23-how-to-android-without-google-easy-way/">How to Android without Google</a>
+                                    <a href="https://twitter.com/HeisSpiter/status/1002880397103988737">ReactOS can finally build itself</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17213808">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17215409">
                                         
-                                            83 comments
+                                            64 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=schrodingersbox">schrodingersbox</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527933214"
+                                            href="https://news.ycombinator.com/user?id=O_H_E">O_H_E</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527959542"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    210 points
+                                    211 points
                                 </span>
                             </td>
                         </tr>
@@ -600,7 +600,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1528003372" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528003803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
