--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -514,17 +514,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/@MerciMichel/ouigo-lets-play-case-study-b763f69dd89c">How we built a high-definition WebGL pinball</a>
+                                    <a href="http://radar.spacebar.org/f/a/weblog/comment/1/1157">Reverse-emulating the NES</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17213888">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17214269">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=nnx">nnx</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527935244"
+                                            href="https://news.ycombinator.com/user?id=onli">onli</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527942602"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     5 points
                                 </span>
@@ -538,17 +538,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://dansclearov.com/machine-learning/machine-learning-the-hard-way/">Learn Machine Learning the Hard Way</a>
+                                    <a href="https://medium.com/@MerciMichel/ouigo-lets-play-case-study-b763f69dd89c">How we built a high-definition WebGL pinball</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17213859">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17213888">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dansclearov">dansclearov</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527934454"
+                                            href="https://news.ycombinator.com/user?id=nnx">nnx</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527935244"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     5 points
                                 </span>
@@ -600,7 +600,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1528005005" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528005467" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
