--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -26,6 +26,16 @@
             updateMySubmissionsSection(false);
         }
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120215820-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+          gtag('config', 'UA-120215820-1');
+    </script>
+
 </head>
 <body>
 <div id="Top">
@@ -376,7 +386,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17217498">
                                         
-                                            1 comments
+                                            2 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=hdivider">hdivider</a></strong> &nbsp;•&nbsp;
@@ -600,7 +610,9 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1528007403" id="pageUpdateTimestamp"></strong>
+            &nbsp;&nbsp;
+            <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
+            <strong class="fr" data-timestamp="1528007626" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
