--- a/top_stories/daily/index.html
+++ b/top_stories/daily/index.html
@@ -26,6 +26,16 @@
             updateMySubmissionsSection(false);
         }
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120215820-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+          gtag('config', 'UA-120215820-1');
+    </script>
+
 </head>
 <body>
 <div id="Top">
@@ -208,13 +218,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17214320">
                                         
-                                            116 comments
+                                            118 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mariuz">mariuz</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527943469"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    397 points
+                                    398 points
                                 </span>
                             </td>
                         </tr>
@@ -286,7 +296,7 @@
                                             href="https://news.ycombinator.com/user?id=gok">gok</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527968675"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    252 points
+                                    253 points
                                 </span>
                             </td>
                         </tr>
@@ -430,7 +440,7 @@
                                             href="https://news.ycombinator.com/user?id=bigato">bigato</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527953227"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    174 points
+                                    175 points
                                 </span>
                             </td>
                         </tr>
@@ -594,7 +604,9 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1528007403" id="pageUpdateTimestamp"></strong>
+            &nbsp;&nbsp;
+            <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
+            <strong class="fr" data-timestamp="1528007626" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
