--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -26,6 +26,16 @@
             updateMySubmissionsSection(false);
         }
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120215820-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+          gtag('config', 'UA-120215820-1');
+    </script>
+
 </head>
 <body>
 <div id="Top">
@@ -310,7 +320,7 @@
                                             href="https://news.ycombinator.com/user?id=fanf2">fanf2</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527975781"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    99 points
+                                    100 points
                                 </span>
                             </td>
                         </tr>
@@ -514,17 +524,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.vox.com/the-big-idea/2018/5/31/17413356/low-birthrate-millennials-economy">The birthrate in the U.S. is the lowest it’s been in 30 years</a>
+                                    <a href="https://twitter.com/sandofsky/status/1002637340291018754">Facebook moving away from React Native?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17201236">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17216628">
                                         
-                                            118 comments
+                                            38 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pm24601">pm24601</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527809126"
+                                            href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527976844"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     89 points
                                 </span>
@@ -538,19 +548,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://airbnb.io/lottie/">Lottie for Android, iOS, React Native, and Web</a>
+                                    <a href="https://www.vox.com/the-big-idea/2018/5/31/17413356/low-birthrate-millennials-economy">The birthrate in the U.S. is the lowest it’s been in 30 years</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17209832">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17201236">
                                         
-                                            16 comments
+                                            118 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=quickthrower2">quickthrower2</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527884753"
+                                            href="https://news.ycombinator.com/user?id=pm24601">pm24601</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527809126"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    88 points
+                                    89 points
                                 </span>
                             </td>
                         </tr>
@@ -600,7 +610,9 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1528007403" id="pageUpdateTimestamp"></strong>
+            &nbsp;&nbsp;
+            <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
+            <strong class="fr" data-timestamp="1528007626" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
