--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -26,6 +26,16 @@
             updateMySubmissionsSection(false);
         }
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120215820-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+          gtag('config', 'UA-120215820-1');
+    </script>
+
 </head>
 <body>
 <div id="Top">
@@ -202,19 +212,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://twitter.com/sandofsky/status/1002637340291018754">Facebook moving away from React Native?</a>
+                                    <a href="http://airbnb.io/lottie/">Lottie for Android, iOS, React Native, and Web</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17216628">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17209832">
                                         
-                                            37 comments
+                                            16 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527976844"
+                                            href="https://news.ycombinator.com/user?id=quickthrower2">quickthrower2</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527884753"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    87 points
+                                    88 points
                                 </span>
                             </td>
                         </tr>
@@ -477,7 +487,9 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1528007403" id="pageUpdateTimestamp"></strong>
+            &nbsp;&nbsp;
+            <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
+            <strong class="fr" data-timestamp="1528007626" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
