--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -464,7 +464,7 @@
                                             href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527947521"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    237 points
+                                    238 points
                                 </span>
                             </td>
                         </tr>
@@ -548,17 +548,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.logolounge.com/articles/2018-logo-trends">Logo design trends of 2018</a>
+                                    <a href="https://twitter.com/HeisSpiter/status/1002880397103988737">ReactOS can finally build itself</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17196558">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17215409">
                                         
-                                            47 comments
+                                            72 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=zwieback">zwieback</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527776977"
+                                            href="https://news.ycombinator.com/user?id=O_H_E">O_H_E</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527959542"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     228 points
                                 </span>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528022403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528023004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
